syntax = "proto3";

import "google/protobuf/empty.proto";
package proto;

option go_package = "proto;proto";

// --- imports --

message ControllerInfo {
    string name = 1;
    string version = 2;
}

enum ControllerStatus {
    RUNNING = 0;
    IDLE = 1;
}

message ControllerHealth {
    ControllerStatus status = 1;
}

message CommonError {
    string code = 1;
    string severity = 2;
    string shortDescription = 3;
    string longDescription = 4;
    string probableCause = 5;
    string suggestedRemediation = 6;
}

//

enum Capability {
    FULL = 0;
    HALF = 1;
    NONE = 2;
}

enum ResultStatus {
    PASSED = 0;
    FAILED = 1;
}

message ServiceMesh {
    string name = 1;
    string version = 2;
    map<string,string> labels = 3;
    map<string,string> annotations = 4;
}

message Request {
    ServiceMesh mesh = 1;
}

message Result {
  oneof result {
    string message = 1;
    CommonError error = 2;
  }
}

message Detail {
    string smispec = 1;
    string specversion = 2;
    string assertion = 3;
    string duration = 4;
    Result result = 5;
    ResultStatus status = 6;
}

message Response {
    string passpercent = 1;
    string casespassed = 2;
    ServiceMesh mesh = 3;
    Capability capability = 4;
    repeated Detail details = 5;
}

service conformanceTesting{
    rpc Info (google.protobuf.Empty) returns (ControllerInfo);
    rpc Health (google.protobuf.Empty) returns (ControllerHealth);
    rpc RunTest (Request) returns (Response);
}